<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="vertical"
    tools:context="com.example.user.ludifit.MainScreen.MainActivity">

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:background="@color/colorBrightOrange"
        android:elevation="4dp"


        >
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/three_dot"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/frame_assets_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/userframe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:background="@drawable/gradientbackground"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:contentDescription="@string/imgplayer"
                android:src="@drawable/user_pic" />

            <TextView
                android:id="@+id/profile_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/top_user_name"
                android:textColor="#fff"
                android:textSize="21sp"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cards"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/userframe"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friends"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/profile_num_friends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textColor="@color/colorGrey"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/profile_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textColor="@color/colorGrey"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/achivclick"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/achievements"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/profile_num_achievements"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textColor="@color/colorGrey"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/frame_assets_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">



        <!--<LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"> -->

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            app:layout_constraintBottom_toTopOf="@+id/height_weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/mail" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="50dp"
                android:paddingLeft="20dp"
                android:text="e_green@gmail.com" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cell"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            app:layout_constraintBottom_toTopOf="@+id/date_birth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height_weight">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/phone" />

            <EditText
                android:id="@+id/cell_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:layout_marginEnd="50dp"
                android:text="+351 225 225" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cell">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/age" />

            <EditText
                android:id="@+id/date_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:layout_marginEnd="50dp"
                android:text="29/05/1998" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/height_weight"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            app:layout_constraintBottom_toTopOf="@+id/cell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@android:color/transparent"
                android:src="@drawable/weight" />

            <EditText
                android:id="@+id/assets_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:layout_marginEnd="50dp"
                android:text="H: 173cm  W: 59kg" />
        </LinearLayout>


        <!-- </LinearLayout> -->

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/gradientbackground"
            android:text="@string/editBtn"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_birth" />

    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:id="@+id/threeDots"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:baselineAligned="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/left_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:layout_weight="4.5">

            <Button
                android:id="@+id/left_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center|end"
                android:background="@drawable/circle_shape" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/center_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/center_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal|center"
                android:background="@drawable/circle_shape_light" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/right_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center|start"
            android:layout_weight="4.5">

            <Button
                android:id="@+id/right_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center|start"
                android:background="@drawable/circle_shape_light" />

        </FrameLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>