<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".Social.Social">

    <View
        android:id="@+id/social_header_background"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:background="@color/colorOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/social_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/social_header_text"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/social_header_background"
        app:layout_constraintStart_toStartOf="@+id/social_header_background"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/friends_list_background"
        android:layout_width="0dp"
        android:layout_height="145dp"
        android:background="@color/colorBrightOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social_header_background" />

    <TextView
        android:id="@+id/friends_list_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/friends"
        android:textColor="@color/colorGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friends_list_background" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/horizontal_friends_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/friends_list_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friends_list_header">

    </android.support.v7.widget.RecyclerView>

    <View
        android:id="@+id/groups_list_background"
        android:layout_width="0dp"
        android:layout_height="145dp"
        android:background="@color/colorBrightOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_friends_list" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/groups"
        android:textColor="@color/colorGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/groups_list_background" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/horizontal_groups_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/groups_list_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/groups_list_background"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_groups_list">

    </SearchView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_results_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/left_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:layout_weight="4.5">

            <Button
                android:id="@+id/left_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center|end"
                android:background="@drawable/circle_shape_light" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/center_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/center_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal|center"
                android:background="@drawable/circle_shape_light" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/right_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center|start"
            android:layout_weight="4.5">

            <Button
                android:id="@+id/right_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center|start"
                android:background="@drawable/circle_shape" />

        </FrameLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>